// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component should render a non-default color correctly 1`] = `
<View
  accessibilityLabel={undefined}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
      Object {
        "backgroundColor": "black",
      },
      Object {},
    ]
  }
>
  <Icon
    color="#FFFFFF"
    name="ios-person"
    size={32}
  />
</View>
`;

exports[`Avatar component should render an empty avatar correctly 1`] = `
<View
  accessibilityLabel={undefined}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
      Object {
        "backgroundColor": "#00b7c2",
      },
      Object {},
    ]
  }
>
  <Icon
    color="#b3eaed"
    name="ios-person"
    size={32}
  />
</View>
`;

exports[`Avatar component should render correctly 1`] = `
<View
  accessibilityLabel={undefined}
  style={
    Array [
      Object {
        "alignItems": "center",
        "justifyContent": "center",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
      Object {
        "backgroundColor": "#1abc9c",
      },
      Object {},
    ]
  }
>
  <Text
    color="white"
    lineHeight={false}
    style={
      Object {
        "fontSize": 11,
      }
    }
    weight="bold"
  >
    TT
  </Text>
</View>
`;
